# python_for_data_science

./: .gitignore
Python_00_Starting/ex00/: Hello.py
Python_00_Starting/ex01/: format_ft_time.py
Python_00_Starting/ex02/: find_ft_type.py  tester.py
Python_00_Starting/ex03/: NULL_not_found.py
Python_00_Starting/ex04/: whatis.py
Python_00_Starting/ex05/: building.py
Python_00_Starting/ex06/: filterstring.py  ft_filter.py
Python_00_Starting/ex07/: sos.py
Python_00_Starting/ex08/: Loading.py
Python_00_Starting/ex09/: .gitignore  LICENSE  README.md  count_in_list.py  pyproject.toml
Python_00_Starting/ex09/ft_package/: __init__.py  module.py
Python_01_Array/ex00/: give_bmi.py
Python_01_Array/ex01/: array2D.py
Python_01_Array/ex02/: load_image.py
Python_01_Array/ex03/: load_image.py  zoom.py
Python_01_Array/ex04/: load_image.py  rotate.py
Python_01_Array/ex05/: load_image.py  pimp_image.py  tester.py
Python_02_DataTable/ex00/: load_csv.py
Python_02_DataTable/ex01/: aff_life.py  load_csv.py
Python_02_DataTable/ex02/: aff_pop.py
Python_02_DataTable/ex03/: projection_life.py
Python_03_OOP/ex00/: S1E9.py
Python_03_OOP/ex01/: S1E9.py  tester.py
Python_03_OOP/ex02/: DiamondTrap.py  S1E7.py
Python_03_OOP/ex03/: ft_calculator.py
Python_03_OOP/ex04/: ft_calculator.py
Python_04_Dod/ex00/: statistics.py  tester.py
Python_04_Dod/ex01/: in_out.py
Python_04_Dod/ex02/: callLimit.py
Python_04_Dod/ex03/: new_student.py  tester.py
